[fix] fix margin and vertical-align in input element

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -127,6 +127,15 @@ button,
   }
 }
 
+input,
+textarea,
+keygen,
+select,
+button{
+  margin: .5em;
+  vertical-align: middle;
+}
+
 #search{
   background: $color-main;
 }
